<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mbcoppol.project02.MainActivity">

    <Button
        android:text="@string/Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button"
        android:id="@+id/button2"
        android:onClick="onClickWeight"/>

    <Button
        android:text="@string/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:id="@+id/button"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="47dp"
        android:onClick="onClickStopwatch"/>

    <TextView
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="35dp"
        android:textSize="35dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textView" />

    <Button
        android:text="@string/About"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:onClick="onClickAbout"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button3"
        android:src="@drawable/ex1"
        android:layout_marginBottom="16dp"
        android:id="@+id/imageView2" />
</RelativeLayout>
